--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         
         .new-nav-link:focus,
         .new-nav-link:hover {
-            
             color: #fff;
         }
     </style>
@@ -35,7 +34,7 @@
 
 <body>
     <header class="navbar-light navbar-light bg-light">
-        <div class="navbar-top small">
+        <!-- <div class="navbar-top small">
             <div class="container-xl">
                 <div class="d-md-flex justify-content-between align-items-center">
                     <ul class="nav">
@@ -79,8 +78,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <nav class="navbar navbar-expand-md navbar-dark" style="background: #673AB7 !important;">
+        </div> -->
+        <nav class="navbar navbar-expand-md navbar-dark " style="background: #673AB7 !important;">
             <div class="container-xl">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
