--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                             <a class="nav-link" href="#">Songs</a>
                         </li>
                     </ul>
-                    <form class="d-flex">
+                    <form class="d-flex" action="https://www.google.com/search" method="GET">
                         <label for="search"></label>
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control me-2" type="search" name="q" placeholder="Search"
+                            aria-label="Search">
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
                 </div>
@@ -58,8 +59,8 @@
         <div class="py-3 row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 g-4 movies">
             <div class="col bollywood">
                 <div class="card">
-                    <a href="movies/2021/moviename.html" class="card-link">
-                        <img src="images/01.webp" class="card-img-top" alt="..." width="100%" height="100%">
+                    <a href="movies/2021/Premaatur.html" class="card-link">
+                        <img src="images/premaatur.webp" class="card-img-top" alt="premaatur" width="100%" height="100%">
                         <h1 class="p-2 mb-0 h6">This is a long title of the article</h1>
                     </a>
                     <div class="d-flex justify-content-between p-2">
@@ -281,4 +282,5 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
 </body>
+
 </html>
