--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Domain Name</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico" />
 </head>
 
 <body>
