--- a/movies.html
+++ b/movies.html
@@ -31,7 +31,10 @@
                             <a class="nav-link active" href="movies.html">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="upcoming.html">Upcoming</a>
+                            <a class="nav-link" href="up-coming.html">Up Comming</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tv-shows.html">TV Shows</a>
                         </li>
                     </ul>
                     <form class="d-flex" action="https://www.google.com/search" method="GET">
@@ -53,7 +56,7 @@
                     <li class="list new-nav-link" data-filter="kollywood">kollywood</li>
                     <li class="list new-nav-link" data-filter="mollywood">mollywood</li>
                     <li class="list new-nav-link" data-filter="sandalwood">sandalwood</li>
-                    <li class="list new-nav-link" data-filter="others">other wood</li>
+                    <li class="list new-nav-link" data-filter="others">others</li>
                 </ul>
             </section>
         </div>
