--- a/tv-shows.html
+++ b/tv-shows.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="up-coming.html">Up Comming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tv-shows.html">TV Shows</a>
+                        <a class="nav-link active" href="tv-shows.html">TV Shows</a>
                     </li>
                 </ul>
                 <form class="d-flex" action="https://www.google.com/search" method="GET">
