--- a/up-coming.html
+++ b/up-coming.html
@@ -31,7 +31,10 @@
                             <a class="nav-link" href="movies.html">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="upcoming.html">Up Comming</a>
+                            <a class="nav-link active" href="up-coming.html">Up Comming</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tv-shows.html">TV Shows</a>
                         </li>
                     </ul>
                     <form class="d-flex" action="https://www.google.com/search" method="GET">
