--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 </div>
             </div>
             <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 gx-4 movies">
-                <div class="col">
+                <!-- <div class="col">
                     <div class="card">
                         <a href="movies/2021/moviename.html" class="card-link">
                             <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">The Forever Purge</h1>
+                            <h1 class="p-2 mb-0 h6">name</h1>
                         </a>
                         <div class="d-flex justify-content-between p-2">
                             <div class="rating-starts m-0">
@@ -73,24 +73,129 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/#" class="card-link">
+                        <a href="movies/2021/moviename.html" class="card-link">
                             <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Jhund</h1>
+                            <h1 class="p-2 mb-0 h6">Bellbottom (2021)</h1>
                         </a>
                         <div class="d-flex justify-content-between p-2">
                             <div class="rating-starts m-0">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star half-checked-1"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
+                            </div>
+                            <div class="rating">
+                                <p class="m-0">3.3</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/moviename.html" class="card-link">
+                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Laabam (2021)</h1>
+                        </a>
+                        <div class="d-flex justify-content-between p-2">
+                            <div class="rating-starts m-0">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star half-checked-1"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
                             </div>
                             <div class="rating">
-                                <p class="m-0">na</p>
+                                <p class="m-0">2.3</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/moviename.html" class="card-link">
+                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Seetimaarr (2021)</h1>
+                        </a>
+                        <div class="d-flex justify-content-between p-2">
+                            <div class="rating-starts m-0">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star half-checked-2"></span>
+                                <span class="fa fa-star unchecked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                            </div>
+                            <div class="rating">
+                                <p class="m-0">3.9</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/moviename.html" class="card-link">
+                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Raja Raja Chora (2021)</h1>
+                        </a>
+                        <div class="d-flex justify-content-between p-2">
+                            <div class="rating-starts m-0">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star half-checked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                            </div>
+                            <div class="rating">
+                                <p class="m-0">4.2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/moviename.html" class="card-link">
+                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Asmee (2021)</h1>
+                        </a>
+                        <div class="d-flex justify-content-between p-2">
+                            <div class="rating-starts m-0">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star half-checked-2"></span>
+                                <span class="fa fa-star unchecked"></span>
+                            </div>
+                            <div class="rating">
+                                <p class="m-0">4.8</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/moviename.html" class="card-link">
+                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Yaar Anmulle Returns (2021)</h1>
+                        </a>
+                        <div class="d-flex justify-content-between p-2">
+                            <div class="rating-starts m-0">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star half-checked"></span>
+                                <span class="fa fa-star unchecked"></span>
+                            </div>
+                            <div class="rating">
+                                <p class="m-0">4.4</p>
                             </div>
                         </div>
                     </div>
