--- a/tv-shows.html
+++ b/tv-shows.html
@@ -28,14 +28,8 @@
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background: #673AB7 !important;">
-        <div class="container-xl"> <a class="navbar-brand" href="../../index.html"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="100" height="40" viewBox="0 0 272 88">
-                    <text id="FilmyDice" transform="translate(0 70)" fill="#fff" font-size="70"
-                        font-family="Lobster-Regular, Lobster">
-                        <tspan x="0" y="0">FilmyDice</tspan>
-                    </text>
-                </svg>
-            </a>
+        <div class="container-xl">
+            <a class="navbar-brand" href="#"><img src="logo.png" alt="FilmyDice"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"> <span class="fa fa-bars"></span> </button>
