--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domain Name</title>
+    <title>TOPU</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header class="navbar-light navbar-light bg-light">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background: #673AB7 !important;">
             <div class="container-xl">
-                <a class="navbar-brand" href="#"><i class="fa fa-home"></i></a>
+                <a class="navbar-brand" href="#"><img src="logo.png" alt="FilmyDice"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -52,152 +52,112 @@
                     <p class="line"></p>
                 </div>
             </div>
-            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 gx-4 movies">
-                <!-- <div class="col">
-                    <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
-                                height="100%">
-                            <h1 class="p-2 mb-0 h6">name</h1>
-                        </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">na</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-6 gx-4 movies">            
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                        <a href="movies/2021/Shang-Chi-and-the-Legend-of-the-Ten-Rings.html" class="card-link">
+                            <img src="movies/images/Shang-Chi-and-the-Legend-of-the-Ten-Rings.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Bellbottom (2021)</h1>
+                            <h1 class="p-2 mb-0 h6">Shang-Chi and the Legend of the Ten Rings</h1>
                         </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star half-checked-1"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">3.3</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                        <a href="movies/2021/Malignant.html" class="card-link">
+                            <img src="movies/images/Malignant.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Laabam (2021)</h1>
+                            <h1 class="p-2 mb-0 h6">Malignant</h1>
                         </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star half-checked-1"></span>
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">2.3</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                        <a href="movies/2021/Gunpowder-Milkshake.html" class="card-link">
+                            <img src="movies/images/Gunpowder-Milkshake.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Seetimaarr (2021)</h1>
+                            <h1 class="p-2 mb-0 h6">Gunpowder Milkshake</h1>
                         </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star half-checked-2"></span>
-                                <span class="fa fa-star unchecked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">3.9</p>
-                            </div>
-                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/The-Conjuring-The-Devil-Made-Me-Do-It.html" class="card-link">
+                            <img src="movies/images/The-Conjuring-The-Devil-Made-Me-Do-It.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">The Conjuring: The Devil Made Me Do It</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Chehre.html" class="card-link">
+                            <img src="movies/images/Chehre.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Chehre</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Thalaivi.html" class="card-link">
+                            <img src="movies/images/Thalaivi.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Thalaivi</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Bellbottom.html" class="card-link">
+                            <img src="movies/images/Bellbottom.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Bellbottom</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Laabam.html" class="card-link">
+                            <img src="movies/images/Laabam.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Laabam</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <a href="movies/2021/Seetimaarr.html" class="card-link">
+                            <img src="movies/images/Seetimaarr.webp" class="card-img-top" alt="premaatur" width="100%"
+                                height="100%">
+                            <h1 class="p-2 mb-0 h6">Seetimaarr</h1>
+                        </a>
                     </div>
                 </div> 
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                        <a href="movies/2021/Raja-Raja-Chora.html" class="card-link">
+                            <img src="movies/images/Raja-Raja-Chora.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Raja Raja Chora (2021)</h1>
+                            <h1 class="p-2 mb-0 h6">Raja Raja Chora</h1>
                         </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star half-checked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">4.2</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                        <a href="movies/2021/Asmee.html" class="card-link">
+                            <img src="movies/images/Asmee.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Asmee (2021)</h1>
+                            <h1 class="p-2 mb-0 h6">Asmee</h1>
                         </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star half-checked-2"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">4.8</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <a href="movies/2021/moviename.html" class="card-link">
-                            <img src="images/poster.webp" class="card-img-top" alt="premaatur" width="100%"
+                        <a href="movies.html" class="card-link">
+                            <img src="view.webp" class="card-img-top" alt="premaatur" width="100%"
                                 height="100%">
-                            <h1 class="p-2 mb-0 h6">Yaar Anmulle Returns (2021)</h1>
                         </a>
-                        <div class="d-flex justify-content-between p-2">
-                            <div class="rating-starts m-0">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star half-checked"></span>
-                                <span class="fa fa-star unchecked"></span>
-                            </div>
-                            <div class="rating">
-                                <p class="m-0">4.4</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
