--- a/movies.html
+++ b/movies.html
@@ -16,7 +16,7 @@
     <header class="navbar-light navbar-light bg-light">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background: #673AB7 !important;">
             <div class="container-xl">
-                <a class="navbar-brand" href="#"><i class="fa fa-home"></i></a>
+                <a class="navbar-brand" href="#"><img src="logo.png" alt="FilmyDice"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
