--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="google-site-verification" content="A2vVlFZrmYHHljnZts98KRSkcDzh1yO1aWrfGd3YTQ8" />
 </head>
 
 <body>
